--- a/sudoku-env.yaml
+++ b/sudoku-env.yaml
@@ -1,6 +1,6 @@
 name: sudoku-env
 dependencies:
-  - python
+  - python=3.11.*
   - ipykernel
   - pip
   - pip:
@@ -9,3 +9,7 @@ dependencies:
     - numpy
     - scipy
     - sudokum
+    - tensorflow
+    - scikit-learn==1.3.1
+    - pydot
+    - graphviz
